// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Prefilled story 1`] = `
<div>
  <ui5-textarea
    growing-max-lines="0"
    rows="0"
    style="--_textarea_rows: 2; --_textarea_growing_max_lines: 0;"
    ui5-textarea=""
    value="Prefilled Text"
    value-state="None"
  />
</div>
`;

exports[`Renders Standard story 1`] = `
<div>
  <ui5-textarea
    growing-max-lines="0"
    maxlength="100"
    rows="0"
    style="--_textarea_rows: 2; --_textarea_growing_max_lines: 0;"
    ui5-textarea=""
    value-state="None"
  />
</div>
`;
